# revdump

./: .gitattributes  .gitignore  Cargo.toml  LICENSE  README.md
.cargo/: config.toml
.github/workflows/: release.yml
crates/revdump/: Cargo.toml
crates/revdump/src/: cli.rs  error.rs  lib.rs  log.rs
crates/revdump/src/access/: mod.rs  open.rs  privilege.rs  reader.rs
crates/revdump/src/antidebug/: intercept.rs  mod.rs  peb_patch.rs
crates/revdump/src/debug/: context.rs  engine.rs  mod.rs  symbols.rs  tls.rs
crates/revdump/src/discovery/: diff.rs  mod.rs  peb.rs  scan.rs  walk.rs
crates/revdump/src/filter/: hashdb.rs  mod.rs  noise.rs
crates/revdump/src/nt/: ffi.rs  mod.rs
crates/revdump/src/output/: layout.rs  manifest.rs  minidump.rs  mod.rs  naming.rs
crates/revdump/src/reconstruct/: devirt.rs  exports.rs  header.rs  imports.rs  mod.rs  pe.rs
crates/revdump/src/triggers/: execmem.rs  mod.rs  oep.rs  sweep.rs  terminate.rs
crates/revdump32/: Cargo.toml
crates/revdump32/src/: main.rs
crates/revdump64/: Cargo.toml
crates/revdump64/src/: main.rs
